Fix Top Margin on Mobile

--- a/css/taskboard.css
+++ b/css/taskboard.css
@@ -256,7 +256,7 @@ body {
 	top:0em;
 }
 .padded-output {
-	margin-top:13.5em;
+	margin-top:185px;
 }
 
 .left-side{
